Bootstrap setting and refactor navigation + login view

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,301 +1,6 @@
 
+@import "bootstrap";
+
 body{
   font-family:  'Montserrat', sans-serif;
-  font-size: 1.1em;
-  margin: 0;
-  color: #333333;
-}
-
-a{
-  color:#74CCD1;
-}
-
-a:hover{
-  color:#777777;
-}
-q {
-  quotes: "\201C""\201D""\2018""\2019";
-  font-size: 1em;
-  font-weight: bold;
-  margin: 0.5em 0 3em 0;
-}
-.headline{
-  text-align: center;
-  font-size: 1.5em;
-  margin: 0.3em 0;
-  font-family:  'Montserrat', sans-serif;
-  font-weight: normal;
-  margin: 0.3em auto 0.7em auto;
-}
-
-.bigsize{
-  font-size: 2.5em;
-}
-.error{
-  font-weight: bold;
-  color: #ce0906;
-  margin-left: 0.3em;
-}
-
-i{
-  font-size: 0.8em;
-}
-label{
-  font-size: 1.2em;
-}
-
-.Modal {
-  position: relative;
-  padding: 1em;
-  background-color: white;
-  min-height: 100%;
-}
-
-.Overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(111, 111, 111, 0.65);
-}
-
-.Modal h2{
-  margin: 0;
-}
-
-.Modal h1{
-  margin: 0.3em 0;
-}
-.tabs{
-  background: #74ccd1;
-  padding: 0.3em;
-  color: #FFF;
-  border-radius: 25px;
-}
-.tab a{
-  width: 100%;
-  display: inline-block;
-  padding: 0.5em 0;
-  color: #FFF;
-  text-decoration: none;
-}
-.tab a:hover{
-  text-decoration: underline;
-}
-.tab a.active{
-  background: #FFF;
-  color: #74ccd1;
-  border-radius: 30px;
-}
-.paginate-link{
-  margin: 0em 0 3em 0;
-}
-.paginate-link a{
-  padding: 0.2em 1em;
-  margin: 0 0.5em;
-  text-decoration: none;
-  font-size: 1.3em;
-}
-
-.Flash{
-  background: rgba(246, 249, 252, 0.9);
-  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-  font-size: 15px;
-  color: #424770;
-  margin: 0 auto;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
-  -ms-flex-align: center;
-  align-items: center;
-  min-width: 100%;
-  font-size: 1em;
-  padding-left: 1em;
-  padding: 0.6em 0;
-  text-align: center;
-  padding-left: 0;
-}
-
-.Flash.danger{
-  background: #d33838;
-  color:#FFF;
-}
-
-.Flash p{
-  margin: 0;
-  padding: 0;
-  font-weight: 100;
-  text-align: center;
-}
-.ContainerFlash{
-  position: fixed;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    z-index: 1;
-}
-
-.banner-event{
-  background: #f8f8f8;
-  padding: 20px 0;
-  border-radius: 8px;
-  border: 2px solid #74ccd2;
-  text-align: center;
-  p{
-    padding: 0;
-    margin: 0;
-  }
-}
-
-.feedback-button{
-  background: #FD9774;
-  border-radius: 30px;
-  color: #FFF;
-  font-weight: bold;
-  position: fixed;
-  bottom: 20px;
-  left: 10px;
-  padding: 10px;
-  cursor: pointer;
-  p{
-    padding: 0;
-    margin: 0;
-  }
-}
-
-.feedback-button:hover{
-  background: #ce795c;
-}
-
-@media only screen and (min-width: 40em) {
-  .bigsize{
-    font-size: 3em;
-  }
-  .Modal {
-    border-radius: 8px;
-    outline: none;
-  }
-
-  .Overlay {
-    padding: 8em;
-    background: rgba(0, 0, 0, 0.25);
-  }
-  .Flash{
-    min-width: 490px;
-    padding-left: 1em;
-  }
-  .feedback-button{
-    padding: 17px 40px;
-  }
-}
-@media only screen and (min-width: 64em) {
-  .Overlay {
-    padding: 8em 15em;
-    background: rgba(0, 0, 0, 0.25);
-  }
-}
-
-/* Loader */
-.loaderContainer{
-  width: 100%;
-  height: 100%;
-  left: 0; top:0;
-  position: fixed;
-  display: flex;
-  align-items: center;
-  background: #eeeeee;
-}
-.loader-spin {
-  pointer-events: none;
-  width: 2em;
-  height: 2em;
-  margin: 0 auto;
-  border: 0.2em solid transparent;
-  border-color: #eee;
-  border-top-color: #3E67EC;
-  border-radius: 50%;
-  -webkit-animation: loadingspin 1s linear infinite;
-          animation: loadingspin 1s linear infinite;
-}
-
-@-webkit-keyframes loadingspin {
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-@keyframes loadingspin {
-  100% {
-    -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
-  }
-}
-
-/* CUSTOM CHECKBOX */
-input[type=checkbox].css-checkbox {
-  position:absolute; z-index:-1000; left:-1000px; overflow: hidden; clip: rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;
-}
-
-input[type=checkbox].css-checkbox + label.css-label {
-  padding-left:41px;
-  height:36px;
-  display:inline-block;
-  line-height:36px;
-  background-repeat:no-repeat;
-  background-position: 0 0;
-  font-size:36px;
-  vertical-align:middle;
-  cursor:pointer;
-}
-
-input[type=checkbox].css-checkbox:checked + label.css-label {
-  background-position: 0 -36px;
-}
-
-label.css-label {
-  background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_5e67f778a4d9b72b5f87ea729418f5ce.png);
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-select{
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  padding: 5px;
-  display: inline-block;
-  min-width: auto !important;
-  background: none;
-}
-
-.parsley-errors-list{
-  padding: 0;
-  margin: 0;
-}
-.parsley-errors-list li{
-  list-style-type: none;
-  color: #ed6363;
-  font-size: 0.9em;
-}
-
- /*Input Placeholder style*/
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-  opacity:  0.3;
-}
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   opacity:  0.3;
-}
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-  opacity:  0.3;
-}
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   opacity:  0.3;
-}
-::-ms-input-placeholder { /* Microsoft Edge */
-   opacity:  0.3;
 }
