--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,105 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <title><%= t('seo.title') %></title>
-  <meta name="description" content=<%= t('seo.description') %>>
 
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0' name='viewport' />
+  <meta name="description" content="<%= t('seo.description') %>" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+  <meta name="theme-color" content="#ffffff" />
 
-  <meta property="og:title" content="<%= t('seo.title') %>">
-  <meta property="og:description" content=<%= t('seo.og_description') %>>
-  <meta property="og:url" content="https://community.blendinnow.nl">
-
-  <link rel='stylesheet' id='atmosphere_edge_google_fonts-css'  href='https://fonts.googleapis.com/css?family=Montserrat%3A300%2C400%2C500%2C600&#038;subset=latin-ext&#038;ver=1.0.0' type='text/css' media='all' />
+  <meta property="og:title" content="<%= t('seo.title') %>" />
+  <meta property="og:description" content="<%= t('seo.og_description') %>" />
+  <meta property="og:url" content="https://community.blendinnow.nl" />
 
   <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Crete+Round|Quicksand">
-  <%= stylesheet_link_tag    'application', media: 'all' %>
+
+  <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Montserrat%3A300%2C400%2C500%2C600&#038;subset=latin-ext&#038;ver=1.0.0' type='text/css' media='all' />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
+
+
+  <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= yield(:after_js) %>
 </head>
 
 <body>
+  <%= render 'navbar/nav' %>
 
-  <%= render 'notice/bar' %>
-
-  <% if user_signed_in? %>
-    <%= render 'header/main' %>
-  <% else %>
-    <div class="lngs">
-      <%= render 'header/languages' %>
-    </div>
-  <% end %>
-
-  <main>
+  <div class="container">
+    <%= render 'layouts/flash' %>
     <%= yield %>
-    <a href="https://codegull.typeform.com/to/idrLtj">
-      <div class="feedback-button">
-        Your feedback matters!
-      </div>
-    </a>
-  </main>
-
-  <%= render 'footer/footer' %>
-
-  <% if Rails.env.production? %>
-    <!-- Google analytics -->
-    <script>
-      (function(i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r;
-        i[r] = i[r] || function() {
-          (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date();
-        a = s.createElement(o),
-          m = s.getElementsByTagName(o)[0];
-        a.async = 1;
-        a.src = g;
-        m.parentNode.insertBefore(a, m)
-      })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-      ga('create', 'UA-72581252-5', 'auto');
-      ga('send', 'pageview');
-    </script>
-  <% end %>
-
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-  (function(){
-    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-    s1.async=true;
-    s1.src='https://embed.tawk.to/5a5f3ab24b401e45400c2989/default';
-    s1.charset='UTF-8';
-    s1.setAttribute('crossorigin','*');
-    s0.parentNode.insertBefore(s1,s0);
-  })();
-  </script>
-  <!--End of Tawk.to Script-->
-  <!-- Facebook Pixel Code -->
-  <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '195446717909588');
-    fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=195446717909588&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- End Facebook Pixel Code -->
+  </div>
 
 </body>
 </html>
