Style new footer with bootstrap and create pages controller

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -3,4 +3,14 @@
 
 body{
   font-family:  'Montserrat', sans-serif;
+  background-color: #f5f5f5;
+}
+
+.fb-btn{
+  background-color: #3B5998;
+  font-size: 1.2em;
+}
+
+.navbar {
+  background-color: #FFF;
 }
