--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,11 +31,11 @@
 
 <body>
   <%= render 'navbar/nav' %>
-
   <div class="container">
     <%= render 'layouts/flash' %>
     <%= yield %>
+    <%= render 'footer/footer' %>
   </div>
-
 </body>
+
 </html>
