--- a/app/views/navbar/_nav.erb
+++ b/app/views/navbar/_nav.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light border-bottom box-shadow">
 
   <%= link_to root_url, class:"navbar-brand my-0" do %>
    <%= image_tag("blendin-logo-navbar.png", width: 55, height: 55, class: "d-inline-block align-top", alt: "Blendin, we are one.") %>
