--- a/app/assets/stylesheets/auth.scss
+++ b/app/assets/stylesheets/auth.scss
@@ -22,6 +22,10 @@
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+.form-auth input[type="text"] {
+  border-radius: 0;
+  border-bottom: 0;
+}
 .form-auth input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
