--- a/app/views/navbar/_nav.erb
+++ b/app/views/navbar/_nav.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light border-bottom box-shadow">
+<nav class="navbar navbar-expand-lg navbar-light border-bottom box-shadow mb-5">
 
   <%= link_to root_url, class:"navbar-brand my-0" do %>
    <%= image_tag("blendin-logo-navbar.png", width: 55, height: 55, class: "d-inline-block align-top", alt: "Blendin, we are one.") %>
@@ -22,9 +22,9 @@
 
       <% if user_signed_in? %>
         <li class="nav-item dropdown">
-          <a class="nav-item nav-link dropdown-toggle mr-md-2" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
+          <a class="nav-item nav-link dropdown-toggle mr-md-2" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user-circle"></i></a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">Settings</a>
+            <%= link_to t('.settings_link'), settings_profile_path, class: "dropdown-item" %>
             <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
         </li>
