--- a/app/views/inbox/index.html.erb
+++ b/app/views/inbox/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Inbox</h1>
-
+<p>Messagi unread: <%= @messages_unread_count %></p>
 
 <% @conversations.each_with_index do |conversation, i| %>
   <p><%= conversation.last_sender.name %> | <%= conversation.subject %> | <%= conversation.last_message.body %> | <%= link_to "Open messages", inbox_path(conversation) %> | <%=  time_ago_in_words(conversation.updated_at) %></p>
