--- a/app/views/navbar/_nav.erb
+++ b/app/views/navbar/_nav.erb
@@ -10,14 +10,14 @@
 
   <div class="collapse navbar-collapse" id="navbarToggler">
     <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+        <%= active_link_to "Messages", inbox_index_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" href="#">Disabled</a>
       </li>
 
       <% if user_signed_in? %>
