--- a/app/views/inbox/index.html.erb
+++ b/app/views/inbox/index.html.erb
@@ -1,6 +1,19 @@
 <h1>Inbox</h1>
-<p>Messagi unread: <%= @messages_unread_count %></p>
+<p>Unread messages: <%= @messages_unread_count %></p>
 
-<% @conversations.each_with_index do |conversation, i| %>
-  <p><%= conversation.last_sender.name %> | <%= conversation.subject %> | <%= conversation.last_message.body %> | <%= link_to "Open messages", inbox_path(conversation) %> | <%=  time_ago_in_words(conversation.updated_at) %></p>
-<% end %>
+<div class="my-3 p-3 bg-white rounded box-shadow">
+  <h5 class="border-bottom border-gray pb-2 mb-0">Last messages:</h5>
+  <% @conversations.each_with_index do |conversation, i| %>
+
+    <div class="media pt-3">
+      <img class="mr-2 rounded" style="width: 32px; height: 32px;" src="<%= conversation.last_sender.avatar.small_avatar %>" data-holder-rendered="true">
+      <p class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
+        <strong class="d-block text-gray-dark"><%= conversation.last_sender.name %> - <%= conversation.subject %></strong>
+        <%= conversation.last_message.body %>
+        <%= link_to "Go to conversation", inbox_path(conversation) %>
+        <%=  time_ago_in_words(conversation.updated_at) %>
+      </p>
+    </div>
+
+  <% end %>
+</div>
