--- a/app/views/inbox/index.html.erb
+++ b/app/views/inbox/index.html.erb
@@ -5,15 +5,26 @@
   <h5 class="border-bottom border-gray pb-2 mb-0">Last messages:</h5>
   <% @conversations.each_with_index do |conversation, i| %>
 
-    <div class="media pt-3">
-      <img class="mr-2 rounded" style="width: 32px; height: 32px;" src="<%= conversation.last_sender.avatar.small_avatar %>" data-holder-rendered="true">
-      <p class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
-        <strong class="d-block text-gray-dark"><%= conversation.last_sender.name %> - <%= conversation.subject %></strong>
-        <%= conversation.last_message.body %>
-        <%= link_to "Go to conversation", inbox_path(conversation) %>
-        <%=  time_ago_in_words(conversation.updated_at) %>
-      </p>
+    <%= link_to inbox_path(conversation) do %>
+
+    <div class="media text-muted pt-3">
+      <img class="mr-2" style="width: 32px; height: 32px;" src="<%= conversation.last_sender.avatar.small_avatar %>" data-holder-rendered="true">
+
+      <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+        <div class="d-flex justify-content-between align-items-center w-100">
+          <strong class="text-gray-dark"><%= conversation.last_sender.name %></strong>
+          <span class="small">
+            <%=  time_ago_in_words(conversation.updated_at) %><br />
+          </span>
+        </div>
+        <span class="d-block d-flex justify-content-between align-items-center w-100">
+          <%= conversation.last_message.body %>
+        </span>
+      </div>
     </div>
+
+    <% end %>
+
 
   <% end %>
 </div>
