--- a/app/views/inbox/index.html.erb
+++ b/app/views/inbox/index.html.erb
@@ -10,9 +10,9 @@
     <div class="media text-muted pt-3">
       <img class="mr-2" style="width: 32px; height: 32px;" src="<%= conversation.last_sender.avatar.small_avatar %>" data-holder-rendered="true">
 
-      <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
+      <div class="media-body pb-3 mb-0 lh-125 border-bottom border-gray">
         <div class="d-flex justify-content-between align-items-center w-100">
-          <strong class="text-gray-dark"><%= conversation.last_sender.name %></strong>
+          <strong class="text-gray-dark"><%= conversation.last_sender.name %> | <%= conversation.subject %></strong>
           <span class="small">
             <%=  time_ago_in_words(conversation.updated_at) %><br />
           </span>
