--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -28,12 +28,12 @@
   </div>
   <div class="row my-md-3">
     <div class="col-sm-4">
-      <div class="card shadow-sm">
+      <%= link_to "/pages/donate", class:"card shadow-sm" do %>
         <div class="card-body">
           <h4 class="card-title"><i class="fas fa-hand-holding-usd"></i> Donate</h4>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         </div>
-      </div>
+      <% end %>
     </div>
     <div class="col-sm-4">
       <div class="card shadow-sm">
