--- a/app/views/networks/new.html.erb
+++ b/app/views/networks/new.html.erb
@@ -1,6 +1,7 @@
-<section class="NetworkPage clearfix">
-  <div class="sm-col-5 lg-col-5 mx-auto">
-    <%= render 'header'%>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-lg-8">
     <%= render 'form', network: @network %>
+    </div>
   </div>
-</section>
+</div>
