--- a/app/views/networks/_form.html.erb
+++ b/app/views/networks/_form.html.erb
@@ -1,56 +1,80 @@
-<%= form_with(model: network, local: true) do |form| %>
-  <% if network.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(network.errors.count, "error") %> prohibited this network from being saved:</h2>
+<h2 class="mt-5">Complete the form</h2>
 
-      <ul>
-      <% network.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class="card">
+  <div class="card-body">
+  <%= form_with(model: network, local: true) do |form| %>
+
+    <% if network.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(network.errors.count, "error") %> prohibited this network from being saved:</h2>
+
+        <ul>
+        <% network.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <label><%= t('.fullname') %></label>
+      <%= form.text_field :name, required: true, class: 'form-control', placeholder: t('.fullname_placeholder') %>
     </div>
+
+    <div class="form-group">
+      <label><%= t('.sector') %></label>
+      <%= form.text_area :sector, required: true, class: 'form-control', placeholder: t('.sector_placeholder'), rows: "5" %>
+    </div>
+
+    <div class="form-group">
+      <label><%= t('.network') %></label>
+      <%= form.text_area :network, required: true, class: 'form-control', placeholder: t('.network_placeholder') %>
+    </div>
+
+    <div class="form-group">
+      <label><%= t('.city') %></label>
+      <%= form.text_field :city, required: true, class: 'form-control', placeholder: t('.city_placeholder') %>
+    </div>
+
+    <div class="form-group">
+      <label><%= t('.gender_label') %></label>
+      <label class="Label CheckBoxRound">
+        <%= form.radio_button :gender, "m", class:"css-checkbox", required:true  %>
+        <%= t('.gender_male') %>
+      </label>
+      <label class="Label CheckBoxRound">
+        <%= form.radio_button :gender, "f", class:"css-checkbox", required:true  %>
+        <%= t('.gender_female') %>
+      </label>
+    </div>
+
+    <div class="form-group">
+      <label><%= t('.birthday_label') %></label><br>
+      <%= form.date_select :birthday, {start_year: 1945, end_year: 2000, :order => [:day, :month, :year], prompt: true}, { class: 'custom-select custom-width-select' , required: true} %>
+    </div>
+
+    <div class="form-group">
+      <label><%= t('.about_label') %></label>
+      <%= form.text_area :about, class:"form-control" %>
+      <small class="form-text text-muted"><%= t('.about_helper') %></small>
+    </div>
+
+    <div class="form-group">
+      <label><%= t('.residence') %></label>
+      <%= form.text_field :residence, required: true, class: 'form-control', placeholder: t('.residence_placeholder') %>
+    </div>
+
+    <div class="form-group">
+      <label><%= t('.email') %></label>
+      <%= form.text_field :email, required: true, class: 'form-control', placeholder: t('.email_placeholder') %>
+    </div>
+
+    <div class="form-group">
+      <label><%= t('.phone_label') %></label>
+      <%= form.text_field :phone, required: 'true', class: "form-control", required: true, placeholder: t('.phone_placeholder'), 'data-parsley-trigger' => "change",  'data-parsley-type' => "number", 'data-parsley-maxlength' =>"10" %>
+    </div>
+
+    <%= form.submit t('.submit_btn'), class: "btn btn-primary btn-lg" %>
   <% end %>
-
-  <label class="Label"><%= t('.fullname') %></label>
-  <%= form.text_field :name, required: true, class: 'Input Select', placeholder: t('.fullname_placeholder') %>
-
-  <label class="Label"><%= t('.sector') %></label>
-  <%= form.text_area :sector, required: true, class: 'Input Select', placeholder: t('.sector_placeholder') %>
-
-  <label class="Label"><%= t('.network') %></label>
-  <%= form.text_area :network, required: true, class: 'Input Select', placeholder: t('.network_placeholder') %>
-
-  <label class="Label"><%= t('.city') %></label>
-  <%= form.text_field :city, required: true, class: 'Input Select', placeholder: t('.city_placeholder') %>
-
-  <label class="Label"><%= t('.gender_label') %></label>
-
-  <label class="Label CheckBoxRound">
-    <%= form.radio_button :gender, "m", class:"css-checkbox", required:true  %>
-    <%= t('.gender_male') %>
-  </label>
-
-  <label class="Label CheckBoxRound">
-    <%= form.radio_button :gender, "f", class:"css-checkbox", required:true  %>
-    <%= t('.gender_female') %>
-  </label>
-
-  <label class="Label"><%= t('.birthday_label') %></label>
-  <%= form.date_select :birthday, {start_year: 1945, end_year: 2000, :order => [:day, :month, :year], prompt: true}, { class: 'Input Select' , required: true} %>
-
-  <label class="Label"><%= t('.about_label') %></label>
-  <%= form.text_area :about, class:"Input" %>
-  <i><%= t('.about_helper') %></i>
-
-  <label class="Label"><%= t('.residence') %></label>
-  <%= form.text_field :residence, required: true, class: 'Input Select', placeholder: t('.residence_placeholder') %>
-
-  <label class="Label"><%= t('.email') %></label>
-  <%= form.text_field :email, required: true, class: 'Input Select', placeholder: t('.email_placeholder') %>
-
-  <label class="Label"><%= t('.phone_label') %></label>
-  <%= form.text_field :phone, required: 'true', class: "Input", required: true, placeholder: t('.phone_placeholder'), 'data-parsley-trigger' => "change",  'data-parsley-type' => "number", 'data-parsley-maxlength' =>"10" %>
-
-  <br>
-  <%= form.submit t('.submit_btn'), class:"Button full center" %>
-<% end %>
+  </div>
+</div>
