--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,7 +2,7 @@
   <h2>What would you like to do today?</h2>
   <div class="row my-md-4">
     <div class="col-sm-4">
-      <div class="card shadow-sm">
+      <div class="card shadow-sm" style="background:#FFF url('https://uploads-ssl.webflow.com/5ae109486d7b6097d347f1e3/5ae2268b7ceab455294d32b6_card1.jpg') top left no-repeat; background-size:cover;">
         <div class="card-body">
           <h4 class="card-title"><i class="fas fa-users"></i> Meet Blenders</h4>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -10,20 +10,20 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <div class="card shadow-sm">
+      <%= link_to talents_path, class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
           <h4 class="card-title"><i class="fas fa-diagnoses"></i>Teach my Talent</h4>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         </div>
-      </div>
+      <% end %>
     </div>
     <div class="col-sm-4">
-      <div class="card shadow-sm">
+      <%= link_to learn_talents_path, class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
           <h4 class="card-title"><i class="fas fa-lightbulb"></i> Learn a Talent</h4>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
   <div class="row my-md-3">
