--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,8 @@
  *= require auth
  *= require loader
  *= require dashboard
+ *= require components/index
+ *= require events/index
  *= require custom-bootstrap
 
  */
