--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,12 +2,14 @@
   <h2>What would you like to do today?</h2>
   <div class="row my-md-4">
     <div class="col-sm-4">
+      <%= link_to events_path, class:"card shadow-sm dashboard-card-lnk" do %>
       <div class="card shadow-sm">
         <div class="card-body">
           <h4 class="card-title"><i class="fas fa-users"></i> Meet Blenders</h4>
           <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
         </div>
       </div>
+      <% end  %>
     </div>
     <div class="col-sm-4">
       <div class="card shadow-sm">
