--- a/app/views/events/_card_small_group_events.html.erb
+++ b/app/views/events/_card_small_group_events.html.erb
@@ -1,65 +1,24 @@
 <% background = "https://picsum.photos/500/500"  %>
 
-  <div class="row mx-auto my-5 event-card">
-    <div class="col-md-4 my-4 d-flex justify-content-around">
-      <div class="event-normal-card-img" style="background-image:url(<%= background %>)"></div>
+<div class="col-sm-4">
+  <div class="b-card">
+    <%= link_to event_path(event.id) do %>
+      <div class="b-image-cover d-flex align-items-end" style="background-image: url(<%= event.photo %>)"></div>
+    <% end %>
+    <div class="b-topic-label"><%= event.topic %></div>
+    <h2 class="b-title"><%= event.name %></h2>
+    <div class="tagline tagline-promo-40"><%= event.date.strftime("%A, %e %b %Y")%> - <%= event.time.strftime("%H:%M")%></div>
+    <div>
+      <%= link_to "See more", event_path(event.id) %>
+      <% if user_signed_in? && event.is_available_for_user?(current_user) %> |
+        <a class="confirm-button" href="#" data-toggle="modal" data-target="#manage_subscriptions" data-value="<%= event.id %>"><%= t('events._card_small_group_event.subscribe')%>
+        <% if current_user.local %>
+          <%= event.max_local_capacity %> <%= t('events._card_small_group_event.spaces_available')%>
+        <% else %>
+          <%= event.max_refugee_capacity %> <%= t('events._card_small_group_event.spaces_available')%>
+        <% end %>
+        </a>
+      <% end %>
     </div>
-    <div class="col-md-8 d-flex justify-content-around">
-      <div class="d-flex w-100 flex-column justify-content-between">
-        <div class="w-100 d-flex justify-content-between">
-          <div class="w-50">
-            <h2 class="card-title"><%= event.name %></h2>
-          </div>
-          <div class="w-50">
-            <h3 class="my-0 ">
-              <%= event.date.strftime("%A")%></h3>
-            <h3>
-              <%= event.date.strftime("%e %b %Y") %>
-              |
-              <%= event.time.strftime("%H:%M")%></h3>
-          </div>
-        </div>
-        <div class="w-100 d-flex justify-content-between">
-          <div class="w-50">
-            <%= link_to event_path(event.id), class: "btn btn-primary p-0" do %>
-            <button class="btn btn-primary" type="button" name="button">
-              <%= t('events._card_small_group_event.see_more')%>
-            </button>
-          <% end %>
-          </div>
-          <div class="w-50">
-            <% if user_signed_in? && event.is_available_for_user?(current_user) %>
-                <button class="btn btn-primary confirm-button" type="button" name="button" data-toggle="modal" data-target="#manage_subscriptions" value="<%= event.id %>">
-                  <%= t('events._card_small_group_event.subscribe')%>
-                </button>
-                <% if current_user.local %>
-                  <p>
-                    <%= event.max_local_capacity %>
-                    <%= t('events._card_small_group_event.spaces_available')%>
-                  </p>
-                <% else %>
-                  <p>
-                    <%= event.max_refugee_capacity %>
-                    <%= t('events._card_small_group_event.spaces_available')%>
-                  </p>
-                <% end %>
-            <% elsif user_signed_in? && !event.is_available_for_user?(current_user) %>
-              <p> <%= t('events._card_small_group_event.event_full')%> </p>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- DIV da eliminare. -->
-    <div class="d-flex justify-content-around ">
-    <p>
-    Local capacity<%= event.max_local_capacity %>
-    </p>
-    <p>
-    Refugee capacity<%= event.max_refugee_capacity %>
-    </p>
-    <%= link_to "edit", edit_event_path(event.id) %>
-    <%= link_to "destroy", event_path(event.id), method: :delete %>
-    </div>
-
   </div>
+</div>
