--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,31 +1,33 @@
-<% @backgroundurl = "https://berryhoop.s3-eu-central-1.amazonaws.com/uploads/event/photo/10/small_event_favicon.jpg?X-Amz-Expires=600&X-Amz-Date=20180517T053649Z&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIOPPK7RU4V34P6MQ/20180517/eu-central-1/s3/aws4_request&X-Amz-SignedHeaders=host&X-Amz-Signature=33d5962b1b81cce8dc174270e84eb2b69c2a1398c1cbed3d359d89163d485629" %>
-
-  <div class="container">
-
-    <% if user_signed_in? && @my_events.any? %>
-      <h1><%= t('events.index.my_next_events') %></h1>
+<div class="container">
+  <% if user_signed_in? && @my_events.any? %>
+    <h3 class="my-4"><%= t('events.index.my_next_events') %></h3>
+    <div class="row">
       <% @my_events.each do |event|  %>
-        <%= render "card_my_event", event: event %>
+        <%= render "card_my_events", event: event %>
       <% end %>
+    </div>
+  <% end %>
+</div>
 
-    <% end %>
-
-    <!-- small_description: "These events are limited to 10 Blenders each. Please click 'ATTEND' to join."
-    community: "Community events" -->
-
-    <h1><%= t('events.index.small_group') %></h1>
-    <h4><%= t('events.index.small_description') %></h4>
+<div class="container">
+  <h3 class="mt-4"><%= t('events.index.small_group') %></h3>
+  <p><%= t('events.index.small_description') %></p>
+  <div class="row">
     <% @normal_events.each do |event|  %>
-        <%= render "card_small_group_events", event: event %>
+      <%= render "card_small_group_events", event: event %>
     <% end %>
+  </div>
+</div>
 
-  <h1><%= t('events.index.community') %></h1>
-  <div class="row my-4 mx-auto">
+
+<div class="container">
+  <h3 class="mt-4"><%= t('events.index.community') %></h3>
+  <p><%= t('events.index.small_description') %></p>
+  <div class="row">
     <% @community_events.each do |event|  %>
       <%= render "card_community", event: event %>
     <% end %>
   </div>
-
 </div>
 
 <!-- Modal -->
@@ -44,6 +46,6 @@
 </div>
 
 <script type="text/javascript">
-  generateSubscriptionModal()
-  generateUnsubscriptionModal()
+  generateSubscriptionModal();
+  generateUnsubscriptionModal();
 </script>
