--- a/app/views/settings/_navigation.erb
+++ b/app/views/settings/_navigation.erb
@@ -1,6 +1,6 @@
 <div class="list-group mb-3" id="list-tab" role="tablist">
   <%= active_link_to t('.profile'), settings_profile_path, class: "list-group-item list-group-item-action" %>
   <%= active_link_to t('.photo'), settings_photo_path, class: "list-group-item list-group-item-action" %>
+  <%= active_link_to t('.community'), settings_community_path, class: "list-group-item list-group-item-action" %>
   <a class="list-group-item list-group-item-action" id="list-messages-list" data-toggle="list" href="#list-messages" role="tab" aria-controls="messages">Messages</a>
-  <a class="list-group-item list-group-item-action" id="list-settings-list" data-toggle="list" href="#list-settings" role="tab" aria-controls="settings">Settings</a>
 </div>
