adding some style to over card

--- a/app/assets/stylesheets/components/event_cards.scss
+++ b/app/assets/stylesheets/components/event_cards.scss
@@ -10,8 +10,19 @@
   background-position: 50% 50%;
   background-size: cover;
   border-radius: 8px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .05);
+  -webkit-transition: box-shadow .2s ease, -webkit-transform .2s ease;
+  transition: box-shadow .2s ease, -webkit-transform .2s ease;
+  transition: transform .2s ease, box-shadow .2s ease;
+  transition: transform .2s ease, box-shadow .2s ease, -webkit-transform .2s ease;
+  cursor: pointer;
 }
-
+.b-image-cover:hover{
+  box-shadow: 0 1px 6px 0 rgba(0, 0, 0, .15);
+  -webkit-transform: translate(0px, -6px) scale(1.01);
+  -ms-transform: translate(0px, -6px) scale(1.01);
+  transform: translate(0px, -6px) scale(1.01);
+}
 .b-small-image-cover{
   height: 170px;
 }
