--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,66 +1,39 @@
-<% background = "https://picsum.photos/700/700"  %>
+<section class="bg-white position-sticky sticky-top">
+  <div class="container py-3">
+    <div class="row">
+      <div class="col-md-8">
+        <p class="font-weight-light mb-1"><%= @event.date.strftime("%A, %e %b %Y")%> - <%= @event.time.strftime("%H:%M")%></p>
+        <h1><%= @event.name %></h1>
+      </div>
+      <div class="col-md-4">
+        <% if user_signed_in? && @event.is_available_for_user?(current_user) && !current_user.is_partecipant?(@event)  %>
+          <p class="font-weight-bold mb-2">Are you going? <span class="font-weight-normal"><%= render "events/components/capacity", event: @event %></span></p>
+          <button class="btn btn-block btn-lg btn-primary confirm-button" type="button" name="button" data-toggle="modal" data-target="#manage_subscriptions" data-value ="<%= @event.id %>"><%=  t('events.actions.attend')%></button>
+        <% elsif current_user.is_partecipant?(@event) %>
+          <h3 class="mt-3 text-center">🎉🎉 You are in! 🎉🎉</h3>
+        <% else %>
+          <%= render "events/components/full_capacity" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</section>
 
 <div class="container">
- <div class="row my-4">
-   <div class="col-md-4">
-     <div class="w-100 h-100 mb-4 event-show-img" style="background-image:url(<%= background%>)">
-     </div>
-
-   </div>
-
-   <div class="col-md-8">
-
-     <h1><%= @event.name %></h1>
-     <h3><%= @event.complete_address %></h3>
-     <h3 class = "my-0 "> <%= @event.date.strftime("%A, %e %b %Y")%> - <%= @event.time.strftime("%H:%M")%></h3>
-     <p><%= @event.description %></p>
-   </div>
-
- </div>
-
   <div class="row mt-4">
-    <% if !@event.community_events %>
     <div class="col-md-7">
-         <h4>Participant</h4>
-         <div class="d-flex">
-           <div class="w-50 d-flex flex-column">
-             <h5>Local Participant</h5>
-             <% @event.local_partecipants.each do |user| %>
-             <div class="d-flex justify-content-between">
-               <p class ="mb-0 mt-2"><%= user.username %></p>
-               <%= image_tag(user.avatar.small_avatar , style: "width:40px;     height: 40px;") %>
-             </div>
-             <% end %>
-             <div class="d-flex justify-content-between">
-               <% if user_signed_in? && current_user.local && @event.is_available_for_user?(current_user) && !current_user.is_partecipant?(@event) %>
-               <button class="btn btn-primary confirm-button" type="button" name="button" data-toggle="modal" data-target="#manage_subscriptions" value ="<%= @event.id %>"> <%=  t('events._card_large.subscribe')%> </button>
-               <% end %>
-             </div>
-           </div>
-           <div class="w-50 d-flex flex-column ml-4">
-             <h5>Refugee Participant</h5>
-             <% @event.refugee_partecipants.each do |user| %>
-             <div class="d-flex justify-content-between">
-               <p class ="mb-0 mt-2"><%= user.username %></p>
-               <%= image_tag(user.avatar.small_avatar , style: "width:40px;     height: 40px;") %>
-             </div>
-             <% end %>
-             <div class="d-flex justify-content-between">
-               <% if user_signed_in? && !current_user.local && @event.is_available_for_user?(current_user) && !current_user.is_partecipant?(@event)  %>
-               <button class="btn btn-primary confirm-button" type="button" name="button" data-toggle="modal" data-target="#manage_subscriptions" value ="<%= @event.id %>"> <%=  t('events._card_large.subscribe')%> </button>
-               <% end %>
-             </div>
-           </div>
-         </div>
-
-       </div>
-
-    <% end %>
-
-       <div class="col-md-5">
-         <div id="mapid" style="height: 330px; width: 330px"></div>
-       </div>
-     </div>
+      <figure class="figure">
+        <%= image_tag @event.photo.event_detail, class: "figure-img img-fluid rounded", alt: @event.name %>
+        <figcaption class="figure-caption">Picture for the event</figcaption>
+      </figure>
+      <p><%= @event.description %></p>
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-4">
+      <%= render 'events/components/participants', event: @event %>
+      <%= render 'events/components/map' %>
+    </div>
+  </div>
 </div>
 
 
@@ -79,21 +52,19 @@
 </div>
 
 <script type="text/javascript">
-  generateSubscriptionModal()
+  generateSubscriptionModal();
 </script>
 
-
 <script type="text/javascript">
-var lat = "<%= @event.latitude%>"
-var lng = "<%= @event.longitude %>"
-console.log(lat);
-var mymap = L.map('mapid').setView([lat, lng], 13);
+  var lat = "<%= @event.latitude %>"
+  var lng = "<%= @event.longitude %>"
+  console.log(lat);
+  var mymap = L.map('mapid').setView([lat, lng], 13);
 
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-  maxZoom: 18,
-  id: 'mapbox.streets',
-  accessToken: 'your.mapbox.access.token'
-}).addTo(mymap);
-var marker = L.marker([lat, lng]).addTo(mymap);
-
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    maxZoom: 18,
+    id: 'mapbox.streets',
+    accessToken: 'your.mapbox.access.token'
+  }).addTo(mymap);
+  var marker = L.marker([lat, lng]).addTo(mymap);
 </script>
