--- a/app/assets/stylesheets/active_admin.scss
+++ b/app/assets/stylesheets/active_admin.scss
@@ -10,4 +10,5 @@
 // Active Admin's got SASS!
 @import "active_admin/mixins";
 @import "active_admin/base";
-@import 'activeadmin_addons/all';
+@import "activeadmin_addons/all";
+@import 'activeadmin/quill_editor_input';
