--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,7 +26,7 @@
         <%= image_tag @event.photo.event_detail, class: "figure-img img-fluid rounded", alt: @event.name %>
         <figcaption class="figure-caption">Picture for the event</figcaption>
       </figure>
-      <p><%= @event.description %></p>
+      <p><%= raw @event.description %></p>
     </div>
     <div class="col-lg-1"></div>
     <div class="col-lg-4">
