--- a/app/views/navbar/_nav.erb
+++ b/app/views/navbar/_nav.erb
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarToggler">
     <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
+        <%= active_link_to "Home", root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
         <%= active_link_to "Messages", inbox_index_path, class: "nav-link" %>
