--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,55 +1,53 @@
 <div class="container mt-5">
   <h2>What would you like to do today?</h2>
   <div class="row my-md-4">
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to events_path, class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-users"></i> Meet Blenders</h4>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h4 class="card-title"><i class="fas fa-users"></i> <%= t('.events_card_title') %></h4>
+          <p class="card-text"><%= t('.events_card_subtitle') %></p>
         </div>
       <% end  %>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to talents_path, class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-diagnoses"></i>Teach my Talent</h4>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h4 class="card-title"><i class="fas fa-diagnoses"></i> <%= t('.talent_teach_card_title') %></h4>
+          <p class="card-text"><%= t('.talent_teach_card_subtitle') %></p>
         </div>
       <% end %>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to learn_talents_path, class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-lightbulb"></i> Learn a Talent</h4>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h4 class="card-title"><i class="fas fa-lightbulb"></i> <%= t('.talent_learn_card_title') %></h4>
+          <p class="card-text"><%= t('.talent_learn_card_subtitle') %></p>
         </div>
       <% end %>
     </div>
-  </div>
-  <div class="row my-md-3">
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to "/pages/donate", class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-hand-holding-usd"></i> Donate</h4>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h4 class="card-title"><i class="fas fa-hand-holding-usd"></i> <%= t('.donate_card_title') %></h4>
+          <p class="card-text"><%= t('.donate_card_subtitle') %></p>
         </div>
       <% end %>
     </div>
-    <div class="col-sm-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to networks_path, class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-globe"></i> Share my network</h4>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h4 class="card-title"><i class="fas fa-globe"></i> <%= t('.network_card_title') %></h4>
+          <p class="card-text"><%= t('.network_card_subtitle') %></p>
         </div>
       <% end %>
     </div>
-    <div class="col-sm-4">
-      <div class="card shadow-sm">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <%= link_to "", class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-handshake"></i> Become a partner</h4>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <h4 class="card-title"><i class="fas fa-handshake"></i> <%= t('.partner_card_title') %></h4>
+          <p class="card-text"><%= t('.partner_card_subtitle') %></p>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
