--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,3 +1,7 @@
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"
+integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+crossorigin=""/>
+
 <section class="bg-white position-sticky sticky-top">
   <div class="container py-3">
     <div class="row">
@@ -6,7 +10,11 @@
         <h1><%= @event.name %></h1>
       </div>
       <div class="col-lg-4">
-        <%= render "events/components/attend_actions" %>
+        <% if user_signed_in? %>
+          <%= render "events/components/attend_actions" %>
+        <% else %>
+          <%= link_to "Attend the event", event_participants_path(@event), method: :post %>
+        <% end %>
       </div>
     </div>
   </div>
@@ -43,6 +51,12 @@
     </div>
   </div>
 </div>
+
+<%= content_for(:header_script) do %>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+  integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw=="
+  crossorigin=""></script>
+<% end %>
 
 <script type="text/javascript">
   generateSubscriptionModal();
