--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,4 +1,4 @@
 <% if notice || alert %>
-  <div id="alert-component" data-notice="<%= notice %>" data-alert="<%= alert %>"></div>
+  <div id="alert-component" data-notice="<%= notice %>" data-alert="<%= alert %>" class="fixed-bottom left-bottom-alert"></div>
   <%= javascript_pack_tag 'flash' %>
 <% end %>
