overlay if profile is not complete

--- a/app/assets/stylesheets/auth.scss
+++ b/app/assets/stylesheets/auth.scss
@@ -17,6 +17,7 @@
 .form-auth .form-control:focus {
   z-index: 2;
 }
+
 .form-auth input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
@@ -30,4 +31,9 @@
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+
+.form-auth.detached-input input {
+  margin: .5em 0 !important;
+  border-radius: 0.25rem !important;
 }
