--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
 
     <div class="checkbox mb-3">
       <label>
-        <%= f.check_box(:terms_and_conditions )%> <%= t('.terms_and_conditions') %> <a href="//www.iubenda.com/privacy-policy/7951305" class="no-brand" title="Privacy Policy" target="_blank"><%= t('.privacy_policy') %></a>
+        <%= f.check_box(:terms_and_conditions )%> <span class="text-muted"><%= t('.terms_and_conditions') %> <a href="//www.iubenda.com/privacy-policy/7951305" class="no-brand" title="Privacy Policy" target="_blank"><%= t('.privacy_policy') %></a></span>
       </label>
     </div>
 
