--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,7 +42,7 @@ crossorigin=""/>
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Attend</h5>
         <button id="close-modal" type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
