--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,20 +1,16 @@
-<section class="Auth clearfix flex items-center">
-    <div class="sm-col-6 lg-col-3 mx-auto">
-      <h2 class="center"><%= t('.header')%>Change your password</h2>
-
-      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-        <%= devise_error_messages! %>
-        <%= f.hidden_field :reset_password_token %>
-          <%= f.password_field :password, autofocus: true, autocomplete: "off", class:"Input", placeholder: t('.pass_placeholder') %>
-          <%= f.password_field :password_confirmation, autocomplete: "off", class:"Input", placeholder:t('.pass_conf_placeholder') %>
-          <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-          <% end %>
-        <div class="actions">
-          <%= f.submit t('.btn_submit'), class: "Button center" %>
-        </div>
+<div class="text-center mt-5">
+  <h2><%= t('.header')%></h2>
+  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: {method: :put, class: "form-auth detached-input"}) do |f| %>
+    <%= devise_error_messages! %>
+    <%= f.hidden_field :reset_password_token %>
+      <%= f.password_field :password, autofocus: true, autocomplete: "off", class:"form-control", placeholder: t('.pass_placeholder') %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control", placeholder:t('.pass_conf_placeholder') %>
+      <% if @minimum_password_length %>
+        <small class="form-text text-muted">(<%= @minimum_password_length %> characters minimum)</small>
       <% end %>
+      <br />
+      <%= f.submit t('.btn_submit'), class: "btn btn-lg btn-primary btn-block" %>
+  <% end %>
 
-      <%= render "devise/shared/links" %>
-  </div>
-</section>
+  <%= render "devise/shared/links" %>
+</div>
