--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -3,11 +3,11 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to t('.register'), new_registration_path(resource_name), class: "Link" %>
+  <%= link_to t('.register'), new_registration_path(resource_name), class: "Link" %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to t('.forgot_pass'), new_password_path(resource_name), class: "Link" %>
+  <%= link_to t('.forgot_pass'), new_password_path(resource_name), class: "Link" %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
