--- a/app/views/navbar/_nav.erb
+++ b/app/views/navbar/_nav.erb
@@ -9,19 +9,19 @@
   </button>
 
   <div class="collapse navbar-collapse" id="navbarToggler">
-    <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
-      <li class="nav-item">
-        <%= active_link_to "Home", root_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= active_link_to "Messages", inbox_index_path, class: "nav-link" %>
-      </li>
+    <ul class="navbar-nav d-sm-flex ml-md-auto">
 
       <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= active_link_to "Home", dashboard_path, class: "nav-link" %>
+        </li>
+        <!-- <li class="nav-item">
+          <%= active_link_to "Messages", inbox_index_path, class: "nav-link" %>
+        </li> -->
         <li class="nav-item dropdown">
           <a class="nav-item nav-link dropdown-toggle mr-md-2" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user-circle"></i></a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown01">
-            <h6 class="dropdown-header">Dropdown header</h6>
+            <h6 class="dropdown-header">Hi! <%= current_user.name %></h6>
             <%= link_to t('.settings_link'), settings_profile_path, class: "dropdown-item" %>
             <div class="dropdown-divider"></div>
             <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "dropdown-item" %>
@@ -29,17 +29,17 @@
         </li>
      <% end %>
 
+     <% if !user_signed_in? %>
+       <li class="nav-item">
+         <%= active_link_to 'Login', new_user_session_path, class: "btn btn-outline-secondary btn-sm nav-link mr-2"  %>
+       </li>
+
+       <li class="nav-item">
+         <%= active_link_to 'Join in the community', new_user_registration_path, class: "btn btn-outline-secondary btn-sm nav-link"  %>
+       </li>
+     <% end %>
+
     </ul>
-
-    <% if !user_signed_in? %>
-      <div>
-        <%= link_to 'Login', new_user_session_path, class: "btn btn-primary"  %>
-        <%= link_to 'Sign up', new_user_registration_path, class: "btn btn-outline-success"  %>
-      </div>
-   <% else %>
-
-   <% end %>
-
 
   </div>
 </nav>
