--- a/app/views/talents/index.html.erb
+++ b/app/views/talents/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid mt-3">
 
-  <section class="jumbotron talent-jumbotron d-flex align-items-end" style="background: linear-gradient(rgba(37, 37, 37, 0), rgb(39, 39, 39)), url('/assets/talents/share-your-talent-blendin.jpg') no-repeat top center; background-size:cover; color:#FFF; padding: 6rem 0;">
+  <section class="jumbotron talent-jumbotron d-flex align-items-end" style="background: linear-gradient(rgba(37, 37, 37, 0), rgb(39, 39, 39)), url(<%= asset_path 'talents/share-your-talent-blendin.jpg' %>) no-repeat top center; background-size:cover; color:#FFF; padding: 6rem 0;">
     <div class="ml-5">
       <h1 class="jumbotron-heading"><%= t('dashboard.index.talent_teach_card_title') %></h1>
       <p class="lead"><%= t('dashboard.index.talent_teach_card_subtitle') %></p>
