--- a/app/views/networks/index.html.erb
+++ b/app/views/networks/index.html.erb
@@ -1,4 +1,4 @@
-<section class="jumbotron text-center" style="background: #FFF  url('/assets/network/hero-network-blendin.jpg') no-repeat top center; background-size:cover; color:#FFF; padding: 6rem 0;">
+<section class="jumbotron text-center" style="background: #FFF  url(<%= asset_path 'network/hero-network-blendin.jpg' %>) no-repeat top center; background-size:cover; color:#FFF; padding: 6rem 0;">
   <div class="container">
     <h1 class="jumbotron-heading display-4"><%= t('.title') %></h1>
   </div>
